--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@ input[type='checkbox'] {
    <td class="xl261547" style="padding-top:0.01rem;font-size:18pt;text-align:center;" colspan="12"><br>
 <b>Battle Realms: Игровая Таблица (Компактная)</b>
 <br><br>Версия: 1.50q (Последняя)<br>
-<img src="https://i.imgur.com/KGBqfCi.jpg" style="margin-top:20px;margin-right:4px" title="Currently selected: English"/></a>
-<a href="https://battlerealms.github.io/chart-compact-ru/" class="langlink">
-<img src="https://sun9-49.userapi.com/c856032/v856032670/10b8ee/xLS8O5Pf1pU.jpg" style="width:32px;height:22px" title="Switch to Russian"/>
+<img src="https://sun9-49.userapi.com/c856032/v856032670/10b8ee/xLS8O5Pf1pU.jpg" style="width:32px;height:22px;margin-top:20px;margin-right:4px" title="Выбранный Язык: Русский"/></a>
+<a href="https://battlerealms.github.io/chart-compact/" class="langlink">
+<img src="https://i.imgur.com/KGBqfCi.jpg"  title="Переключиться на Английский"/>
 </a>
 <br>
    <div class="wrap-collabsible" style="margin-bottom:0.1rem;padding-top:0.6rem;padding-bottom:1.5rem;font-size:12pt;colspan=12">
   <input id="collapsible00" class="toggle" type="checkbox">
   <label for="collapsible00" class="lbl-toggle" tabindex="0"><strong>
-Последнее обновление: 21 Октября, 2019 (Русский перевод)
+Последнее обновление: 22 Октября, 2019 (Русский перевод)
 </strong>
 </label>
     <div class="collapsible-content">
